# VulkanSamples

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  000_update_externals.bat  001_visual_studio.bat  002_copy_gtest.txt  005_build_windows_targets.bat  BUILD.md  CLA2.txt  CMakeLists-SDK.txt  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.txt  GOVERNANCE.md  LICENSE  LICENSE.txt  LunarGLASS_revision  LunarGLASS_revision_R32  MANIFEST.md  Makefile  README-contrib.md  README.md  build_windows_samples_sdk.bat  build_windows_targets.bat  cla.txt  determine_vs_version.py  generator.py  genvk.py  glave-generate.py  glslang_revert_a5c33d.patch.txt  glslang_revision  glslang_revision_R32  reg.py  samples_index.html  source_line_info.py  spirv-headers_revision  spirv-tools_revision  (+15 more)
API-Samples/: CMakeLists.txt  allocdescriptorsets.cpp  copyblitimage.cpp  dbgcreatemsgcallback.cpp  depthbuffer.cpp  descriptor_pipeline_layouts.cpp  device.cpp  drawcube.cpp  drawsubpasses.cpp  drawtexturedcube.cpp  dynamicuniform.cpp  enable_validation_with_callback.cpp  enumerate-adv.cpp  enumerate.cpp  get-short-descripts.sh  immutable_sampler.cpp  initcommandbuffer.cpp  initframebuffers.cpp  initpipeline.cpp  initrenderpass.cpp  initswapchain.cpp  inittexture.cpp  instance.cpp  instance_layer_extension_properties.cpp  instance_layer_properties.cpp  multiple_sets.cpp  occlusion_query.cpp  pipeline_cache.cpp  pipeline_derivative.cpp  push_constants.cpp  run_all_samples.ps1  run_all_samples.py  run_all_samples.sh  secondarycmd.cpp  separate_image_sampler.cpp  spirv_assembly.cpp  spirv_specialization.cpp  template.cpp  texelbuffer.cpp  uniformbuffer.cpp  (+1 more)
API-Samples/03-init_device/: 03-init_device.cpp
API-Samples/04-init_command_buffer/: 04-init_command_buffer.cpp
API-Samples/05-init_swapchain/: 05-init_swapchain.cpp
API-Samples/06-init_depth_buffer/: 06-init_depth_buffer.cpp
API-Samples/07-init_uniform_buffer/: 07-init_uniform_buffer.cpp
API-Samples/08-init_pipeline_layout/: 08-init_pipeline_layout.cpp
API-Samples/09-init_descriptor_set/: 09-init_descriptor_set.cpp
API-Samples/10-init_render_pass/: 10-init_render_pass.cpp
API-Samples/11-init_shaders/: 11-init_shaders.cpp  11-init_shaders.vert
API-Samples/12-init_frame_buffers/: 12-init_frame_buffers.cpp
API-Samples/13-init_vertex_buffer/: 13-init_vertex_buffer.cpp
Utilities/: CMakeLists.txt  README.md  Readme.md
demos/: CMakeLists.txt  CMakeLists.txt~  README.md  cube-vert.spv  cube.c  cube.cpp  cube.frag  cube.vert  linmath.h  msaa-tri.c  tri-frag.spv  tri-vert.spv  tri.c  tri.frag  tri.vert  vulkaninfo.c  xcb_nvidia.cpp  xglinfo.c
icd/: CMakeLists.txt  README  README.md  VkICD_mock_icd.json
layers/: .clang-format  CMakeLists.txt  README.md  VkLayer_utils.def  api_dump.c  api_dump.h  api_dump.json  api_file_dump.c  apidump.h  basic.cpp  basic.json  basic_plugin.c  buffer_validation.cpp  buffer_validation.h  core_validation.cpp  core_validation.h  core_validation_error_enums.h  core_validation_types.h  debug_support.cpp  descriptor_sets.cpp  descriptor_sets.h  device_extensions.h  device_limits.cpp  device_limits.h  draw_state.c  draw_state.cpp  draw_state.h  draw_state.json  draw_state_config.json  generic.h  generic.json  generic_config.json  glave_snapshot.c  glave_snapshot.h  image.cpp  image.h  image.json  image_config.json  layer_common.h  layer_data.h  (+67 more)
loader/: CMakeLists.txt  LinuxICDs.txt  LoaderAndLayerInterface.md  README.md  WindowsICDs.txt  XGL.def  asm_offset.c  cJSON.c  debug_report.c  debug_report.h  debug_utils.c  dev_ext_trampoline.c  dirent_on_windows.c  extension_manual.c  extension_manual.h  extensions.c  extensions.h  gpa_helper.h  loader.c  loader.generated  loader.h  loader.rc  loader_platform.h  murmurhash.c  murmurhash.h  phys_dev_chain.c  phys_dev_chain_gas.asm  phys_dev_chain_masm.asm  phys_dev_ext.c  table_ops.h  trampoline.c  unknown_ext_chain_gas.asm  vk-loader-generate.py  vk_loader_platform.h  vulkan-1.def  vulkan.def  vulkan.pc.in  wsi.c  wsi.h  wsi_lunarg.c  (+3 more)
src/: CMakeLists.txt  README-cmake.md  README-codegen.md  README.md  get-descripts.sh  get-short-descripts.sh  lunarg.ppm  run_all_samples.ps1  run_all_samples.sh  vk0.10-allocdescriptorsets.cpp  vk0.10-copyblitimage.cpp  vk0.10-dbgcreatemsgcallback.cpp  vk0.10-depthbuffer.cpp  vk0.10-descriptor_pipeline_layouts.cpp  vk0.10-device.cpp  vk0.10-drawcube.cpp  vk0.10-drawsubpasses.cpp  vk0.10-drawtexturedcube.cpp  vk0.10-dynamicuniform.cpp  vk0.10-enable_validation_with_callback.cpp  vk0.10-enumerate-adv.cpp  vk0.10-enumerate.cpp  vk0.10-immutable_sampler.cpp  vk0.10-initcommandbuffer.cpp  vk0.10-initframebuffers.cpp  vk0.10-initpipeline.cpp  vk0.10-initrenderpass.cpp  vk0.10-initshaders.cpp  vk0.10-initswapchain.cpp  vk0.10-inittexture.cpp  vk0.10-instance.cpp  vk0.10-instance_extension_properties.cpp  vk0.10-instance_layer_extension_properties.cpp  vk0.10-instance_layer_properties.cpp  vk0.10-multiple_sets.cpp  vk0.10-multitexture.cpp  vk0.10-multithreadcmdbuf.cpp  vk0.10-occlusion_query.cpp  vk0.10-pipeline_cache.cpp  vk0.10-pipeline_derivative.cpp  (+82 more)
tests/: CMakeLists.txt  README-raster_tests  _run_all_tests.ps1  _run_all_tests_with_layers.ps1  _vkglavetracereplay.ps1  _vktracereplay.ps1  _vkvalidatelayerdoc.ps1  base_render_test.cpp  blit_tests.cpp  common.c  common.h  compiler_render_tests.cpp  debug.h  displayengine.cpp  displayengine.h  icd-spv.h  image_tests.cpp  init.cpp  layer_test_suite.py  layer_validation_tests.cpp  loader_validation_tests.cpp  render_tests.cpp  run_all_tests.ps1  run_all_tests.sh  run_all_tests_with_layers.ps1  run_all_tests_with_layers.sh  run_loader_tests.sh  run_wrap_objects_tests.sh  test_common.h  test_environment.cpp  test_environment.h  test_wrap_objects.sh  tony_objs.c  tony_objs.cpp  tony_render_tests.cpp  vk_layer_settings.txt  vkglavetracereplay.ps1  vkglavetracereplay.sh  vkrenderframework.cpp  vkrenderframework.h  (+28 more)
utils/: CMakeLists.txt  util.cpp  util.hpp  util_init.cpp  util_init.hpp
vktrace/: .gitignore  CMakeLists.txt  README.md  TODO.md  vktrace_generate.py
(+1865 files in other folders)
